--- a/prose/misc/guru-anaerobic/gang-fit/1.md
+++ b/prose/misc/guru-anaerobic/gang-fit/1.md
@@ -1296,7 +1296,7 @@ Strength, agility, speed and fitness are always an advantage. Don’t get soft.
 
 ## Muscle and Strength 
 
-In the past few years the exercise paradigm of how to most effectively lose weight, keep fit and get strong has changed - now it’s believed that the best way is by undertaking short bursts of intense exercise with plenty of recovery – us sprinters knew that for decades. Rather than the fitness of the long distance wimp, you develop the dynamic strength and physique of a sprinter, decathlete or boxer…lean strong and fast. I would take it further and suggest that life should be like that; in fact life *is* like that. You know that on the street that there are long periods of nothing with short bursts of excitement, fear and adrenalin.
+In the past few years the exercise paradigm of how to most effectively lose weight, keep fit and get strong has changed - now it’s believed that the best way is by undertaking short bursts of intense exercise with plenty of recovery – us sprinters knew that for decades.+++(5)+++ Rather than the fitness of the long distance wimp, you develop the dynamic strength and physique of a sprinter, decathlete or boxer…lean strong and fast. I would take it further and suggest that life should be like that; in fact life *is* like that.+++(5)+++ You know that on the street that there are long periods of nothing with short bursts of excitement, fear and adrenalin.+++(5)+++
 
 \[Note: This is how you build mental strength as well - periods of intense pressure or stress followed by ‘recovery’. To create or build something you need constant application that’s true, but to harden your mindset you need to face fears and challenging situations – talking in public, facing threats of violence, smashing up zombies, whatever.\]
 
