--- a/drama/godfather/2.md
+++ b/drama/godfather/2.md
@@ -3962,7 +3962,7 @@ You know there's a Senate
 Investigating Committee recently
 set up; we thought it would be
 unfortunate if they were to trace
-anything though-provoking to your
+anything thought-provoking to your
 name.
 
 SENATOR GEARY
@@ -4838,8 +4838,8 @@ business that we're making.  Do
 this for me; you make the peace
 with the Rosato Brothers on their
 terms.  Let the word out that I
-forced you; you're not happy wit
-hit, but acquiesced, just because
+forced you; you're not happy with it,  
+but acquiesced, just because
 of me.  It will get back to Hyman
 Roth.  Do this, Frankie.  You can
 trust me.
@@ -8635,7 +8635,7 @@ I've always taken care of you.
 FREDO  
 Taken care of me.  Mike, you're my
 kid brother, and you take care of
-my.  Did you ever think of that.
+me.  Did you ever think of that.
 Ever once?  Send Fredo off to do
 this, send Fredo to take care of
 that... take care of some little
